--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=Dainghia2001
-
-#spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:55765/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#local
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 #spring.datasource.username=root
-#spring.datasource.password=A3D3Adca6eCFACHd3CedGghgbHCb-4gF
+#spring.datasource.password=Dainghia2001
+
+#deploy
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:36514/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.username=root
+spring.datasource.password=RYFSegBJvWrIwdXFEUgwkMXgNPKgRdLG
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
+
 #email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
