fix: remove unused method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.datasource.password=Dainghia2001
 
 #deploy
-spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:36514/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.url=jdbc:mysql://junction.proxy.rlwy.net:41110/ecommerce_shoes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
-spring.datasource.password=RYFSegBJvWrIwdXFEUgwkMXgNPKgRdLG
+spring.datasource.password=xUywqfsmVSHYYrHkudRAucVfPZWPeJZT
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
